@@ -25,6 +25,14 @@ JUnit Plafform 1.6 (https://junit.org/junit5/docs/5.6.0/release-notes/index.html
 
 - Upgrade JUnit 4 to 4.13
 
+- Derived data variables (assignments in `where` blocks) now also support multi-assignment syntax, including ignoring
+  some values with the wildcard expression.
++
+[source,groovy]
+----
+(a, b, _, c) = row
+----
+
 == 2.0-M2 (2020-02-10)
 
 === Groovy-3.0 Support
